<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
...

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>

...
    <string name="noAlarm">No tienes alarmas programadas</string>
    <string name="newAlarm">Nueva alarma programada</string>
    <string name="errorInvalidHours">Las horas especificadas no son válidas</string>
    <string name="errorAlarmCollision">Ya existen alarmas programadas para ese rango de horas</string>
    <string name="labelCurrentAlarm">Alarma pendiente</string>
    <string name="placeholderStart">15:00</string>
    <string name="placeholderEnd">16:00</string>
    <string name="contentDescriptionBtnRemoveAlarm">Eliminar alarma de localización</string>
    <string name="contentDescriptionBtnAddAlarm">Añadir alarma de localización</string>
    <string name="addNewAlarmExplanation">Programa una alarma para iniciar y detener el rastreo de tu ubicación a una hora de inicio y de fin determinadas.</string>

    <!-- Fragment: Configuración del Tracker -->
    <string name="minIntervalHint">Intervalo de tiempo</string>
...
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
    <string name="notifyExplanation1">Registra que has dado positivo en la aplicación para que tus localizaciones registradas en los últimos días se suban a la nube.</string>
    <string name="notifyExplanation2">Opcionalmente puedes adjuntar tus datos personales, los cuales quedarán asociados a tus localizaciones. De este modo, contribuyes a facilitar las tareas de rastreo realizadas por el personal sanitario.</string>
    <string name="notifyExplanation3">Tus datos personales están protegidos de acuerdo con nuestra política de privacidad.</string>
    <string name="notifyExplanation4">Se subirán a la nube todas tus localizaciones registradas en los últimos:</string>
    <string name="btnNotifyPositive">He dado positivo</string>
    <string name="addPersonalData">Adjuntar mis datos personales</string>
    <string name="loadingPlaceholderNotifyPositive">Subiendo tus localizaciones a la nube...</string>
    <string name="notifyPositiveResultText">Se han subido %d localizaciones a la nube.</string>
    <string name="errorNotifyLimitExceeded">Se ha superado el límite de notificación. No podrás notificar más positivos hasta pasados %d días.</string>
    <string name="errorNotifyNoLocations">No se ha podido notificar el positivo: no existen localizaciones registradas en el periodo de infectividad. Activa el servicio de rastreo para registrar localizaciones.</string>
    <string name="seePrivacyPolicy">Consulta nuestra</string>

    <!-- Formulario de Datos Personales -->
    <string name="personalDataTitle">Introduce tus datos personales</string>
    <string name="personalDataExplanation">Al introducir tus datos estás facilitando las actividades de rastreo de COVID-19. Tus datos personales quedarán asociados a las localizaciones que se suban a la nube. </string>
    <string name="name">Nombre</string>
...
    <string name="privacyPolicy">Política de Privacidad</string>
    <string name="agree">Sí, estoy de acuerdo</string>
    <string name="cancelAgree">No, gracias</string>

    <!-- Fragment: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="riskPercentPlaceholder">0%</string>
    <string name="txtCheckHour">Hora de la comprobación</string>
    <string name="txtRiskPercent">Riesgo más alto</string>
    <string name="contactWith">Contacto con:</string>
    <string name="positives">Positivos</string>
    <plurals name="positiveContacs">
        <item quantity="one">Contacto con %1$d positivo</item>
        <item quantity="other">Contacto con %2$d positivos</item>
...
    <string name="riskiestContact">Contacto de mayor riesgo</string>
    <string name="riskPercent">Riesgo</string>
    <string name="startHour">Inicio</string>
    <string name="endHour">Fin</string>
    <string name="exposeTime">T. de exposición</string>
    <string name="meanProximity">Proximidad media</string>
    <string name="riskContacts">Contactos de riesgo</string>
    <string name="numberPositives">Número de positivos</string>
    <string name="meanValues">Valores medios</string>
    <string name="totalMeanRisk">Riesgo</string>
    <string name="totalMeanExposeTime">Tiempo de exposición</string>
    <string name="totalMeanProximity">Proximidad</string>
    <string name="generalData">Datos generales</string>
    <string name="riskContactInMap">Contacto de riesgo</string>

    <!-- Fragment: Comprobación de contactos de riesgo -->
    <string name="manualCheck">Comprobación manual</string>
    <string name="periodicCheck">Comprobación periódica</string>
    <string name="checkRiskContacts">Comprobar contactos de riesgo</string>
    <string name="scheduledAlarms">Alarmas programadas</string>
    <string name="manualCheckExplanation">Inicia una comprobación manualmente para detectar posibles contactos de riesgo con otros positivos.</string>
    <string name="periodicCheckExplanation">Programa horas concretas del día para realizar la comprobación de contactos de riesgo. Esta comprobación se repetirá todos los días a las horas indicadas.</string>
    <string name="checkHour">Hora de la comprobación</string>
    <string name="riskContactCheckingPlaceholder">Comparando tus localizaciones con las de otros positivos...</string>
    <string name="checkAlarmSetSnackbar">Alarma de comprobación programada correctamente.</string>
    <string name="checkAlarmErrorCollision">Ya existen alarmas de comprobación programadas para esa hora.</string>
    <string name="checkAlarmErrorCountLimit">No puedes programar más de %d alarmas de comprobación.</string>
    <string name="addRiskContactAlarmBtnDescription">Añadir alarma de comprobación.</string>
    <string name="tabCheck">Comprobar</string>
    <string name="tabResults">Resultados</string>

    <!-- Notificaciones: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="resultNotificationTitle">Resultados de la comprobación</string>
    <string name="resultNotificationHealthy">No has tenido contacto con ningún positivo.</string>
...
