...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioBtnPeriodicCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/periodicCheck"
                    android:textAppearance="?attr/textAppearanceSubtitle2" />

                <TextView
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutCheckHour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:hint="@string/checkHour"
                        android:layout_marginEnd="4dp">
                        <com.google.android.material.textfield.TextInputEditText
...
                            android:maxLines="1"
                            android:text='@{du.formatDate(viewModel.checkHour, "HH:mm")}'
                            android:editable="false"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnApplyCheckHour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.13"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/add_button"
...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <!-- Grupo de Chips con las alarmas programadas -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/alarmChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:visibility="@{!viewModel.emptyAlarms}"/>

                <!-- Label para lista de alarmas vacía -->
...
